examples/test/testpolicy19702.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19702
  namespace: namespace397
spec:
  podSelector:
    matchLabels:
      key44: value8
      key43: value7
      key35: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value30
          key7: value30
          key26: value25
      podSelector:
        matchLabels:
          key37: value36
